samples/_failures_safe/1761409114_5b9c04_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dc92c6ab.c: In function ‘main’:
./samples/SAFE/__tmp_dc92c6ab.c:134:13: error: expected declaration or statement at end of input
  134 |             MATRIX_MULT(matrix1, matrix2, result, rows1, cols1, cols2);
      |             ^~~~~~~~~~~
./samples/SAFE/__tmp_dc92c6ab.c:134:13: error: expected declaration or statement at end of input
